--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
             <section id="recommandation">
 
-                <h1 class="head"><span><i class="fas fa-pencil-alt"></i></span>Experience</h1>
+                <h1 class="head"><span><i class="fas fa-pencil-alt"></i></span>Recommandation</h1>
 
                 <div class="yellowDivider"></div>
 
@@ -161,3 +161,5 @@
     </body>
 
 </html>
+
+<!--https://mahamadou828.github.io/projet2-OP/-->
