--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="fr">
 
     <head>
         <meta charset="utf-8">
@@ -19,7 +19,7 @@
             </div>
             
             <div id="contact">
-                <h1 class="title">Contact</h1>
+                <h2 class="title">Contact</h2>
                 <p>
                     <span>Adresse<br/>Moscou,Russie</span>
                     <span>Telephone<br/>+7-920-682-74-43</span>
@@ -28,7 +28,7 @@
             </div>
 
             <div id="aProposDeMoi">
-                <h1 class="title">A Propos De Moi</h1>
+                <h2 class="title">A Propos De Moi</h2>
                 <p>
                     Etudiant de seconde annee a l'universite technologique de moscou, 
                     je suis un passionner de developpement et plus precisement de web programmation.
@@ -42,7 +42,7 @@
             </div>
 
             <div id="loisir">
-                <h1 class="title">Loisir</h1>
+                <header class="title">Loisir</header>
                 <div>
                     <i class="fas fa-laptop-code"></i>
                     <i class="fas fa-plane-departure"></i>
@@ -61,7 +61,7 @@
 
             <section id="formation">
 
-                <h1 class="head"><span><i class="fas fa-graduation-cap"></i></span>Formation</h1>
+                <header class="head"><span><i class="fas fa-graduation-cap"></i></span>Formation</header>
 
                 <div class="yellowDivider"></div>
 
@@ -72,7 +72,7 @@
                     </ul>
                     
                     <div>
-                        <h1>Openclassroom</h1>
+                        <h2>Openclassroom</h2>
                         <h2>Developpeur web</h2>
                         <p>Obtention d'un diplome de niveau bac+2 suite a une formation de six mois , dans le but de devenir developpeur web , sur la plateforme francaise Openclassrooms</p>
                     </div>
@@ -86,7 +86,7 @@
                     </ul>
 
                     <div>
-                        <h1>Universite de technologie de Moscou</h1>
+                        <h2>Universite de technologie de Moscou</h2>
                         <h2>Ingenieur en instrumentation</h2>
                         <p>Obtention d'un diplome en tant qu'ingenieur en instrumentation electronique</p>
                     </div>
@@ -97,7 +97,7 @@
 
             <section id="Experience">
 
-                <h1 class="head"><span><i class="fas fa-business-time"></i></span>Experience</h1>
+                <header class="head"><span><i class="fas fa-business-time"></i></span>Experience</header>
 
                 <div class="yellowDivider"></div>
 
@@ -107,7 +107,7 @@
                         <li>Decembre 2018 <br>Moscou</li>
                     </ul>
                     <div>
-                        <h1>Yandex</h1>
+                        <h2>Yandex</h2>
                         <h2>Stage en tant que developpeur front-end</h2>
                         <p>Stage de six mois dans la compagnie qui developpe le moteur de recherche Yandex. La misson consistait a realiser une feature pour l'application  YandexBox </p>
                     </div>
@@ -121,7 +121,7 @@
                         <li>Septembre 2019 <br>Moscou</li>
                     </ul>
                     <div>
-                        <h1>Mail.ru</h1>
+                        <h2>Mail.ru</h2>
                         <h2>Stage en tant que developpeur back-end</h2>
                         <p>Stage de trois mois ou la mission consistait a creer le back-end d'une messagerie instantanne</p>
                     </div>
@@ -133,21 +133,21 @@
 
             <section id="recommandation">
 
-                <h1 class="head"><span><i class="fas fa-pencil-alt"></i></span>Recommandation</h1>
+                <header class="head"><span><i class="fas fa-pencil-alt"></i></span>Recommandation</header>
 
                 <div class="yellowDivider"></div>
 
                 <div class="content">
 
                     <div class="recommamdation">
-                        <p>Daniil Filipov</p>
+                        <h2>Daniil Filipov</h2>
                         <p>Directeur de Yandex</p>
                         <p>Telephone: +7-984-756-45-25</p>
                         <p>Email:daniilfilipov@mail.ru</p>
                     </div>
 
                     <div class="recommamdation">
-                        <p>Alexandre Dyiman</p>
+                        <h2>Alexandre Dyiman</h2>
                         <p>Directeur de Mail.ru</p>
                         <p>Telephone: +7-450-879-12-33</p>
                         <p>Email:alex@mail.ru</p>
