--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Mon cv</title>
         <script src="https://kit.fontawesome.com/e762997950.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
@@ -31,10 +32,10 @@
                 <h2 class="title">A Propos De Moi</h2>
                 <p>
                     Etudiant de seconde annee a l'universite technologique de moscou, 
-                    je suis un passionner de developpement et plus precisement de web programmation.
-                    Etant de nature debrouillard, je me suis former comme autodidacte au metier de developpeur web, 
+                    je suis un passionne de developpement et plus precisement de web programmation.
+                    Etant de nature debrouillarde, je me suis former au developpement web, 
                     a travers des formations en ligne , notamment celle d'openclassrooms , 
-                    j'ai acquis des competences et des capacites me permettant de developper des projets complexes. 
+                    j'ai acquis des competences pour developper des projets complexes. 
                     Aujourd'hui dans le but d'augmenter mon experience professionnel je suis en quete de stage et de projet serieux 
                     au sein d'une entreprise. Donc si vous avez besoins de developper un site web dynamique 
                     ou des features pour une applications mobile ou web , je suis a votre disposition)
@@ -72,7 +73,7 @@
                     </ul>
                     
                     <div>
-                        <h2>Openclassroom</h2>
+                        <h2>Openclassrooms</h2>
                         <h2>Developpeur web</h2>
                         <p>Obtention d'un diplome de niveau bac+2 suite a une formation de six mois , dans le but de devenir developpeur web , sur la plateforme francaise Openclassrooms</p>
                     </div>
