--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                         <h2 class="head"><span><i class="fas fa-graduation-cap"></i></span>Formation</h2>
 
-                        <hr class="yellowDivider"></hr>
+                        <hr class="yellowDivider" />
 
                         <div class="content">
                             
@@ -111,7 +111,7 @@
 
                         <header class="head"><span><i class="fas fa-business-time"></i></span>Experience</header>
 
-                        <hr class="yellowDivider"></hr>
+                        <hr class="yellowDivider" />
 
                         <div class="content">
                             
@@ -145,7 +145,7 @@
 
                         <header class="head"><span><i class="fas fa-pencil-alt"></i></span>Recommandation</header>
 
-                        <hr class="yellowDivider"></hr>
+                        <hr class="yellowDivider" />
 
                         <div class="content">
 
