--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             Étudiant de seconde année a l'université de technologie de Moscou, 
                             je suis un passionné de programmation .
                             Étant de nature débrouillarde, je me suis formé au développement web, 
-                            a travers des cours en ligne , notamment celle d'Openclassrooms. 
+                            a travers des cours en ligne , notamment ceux d'Openclassrooms. 
                             J'ai acquis des compétences me donnant la possibilité de réaliser des projets complexes. 
                             Aujourd'hui dans le but d'obtenir de l'expérience, je suis à la recherche de projets 
                             sérieux au sein d'une entreprise. Donc si vous avez besoin de développer un site web dynamique,
