--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="index.css">
         <title>Mon cv</title>
         <script src="https://kit.fontawesome.com/e762997950.js" crossorigin="anonymous"></script>
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap">
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
